# lazymem

./: .gitignore  README.md  install.sh  package.json  program.md
.github/workflows/: release.yml
Formula/: lazymem.rb
bench/: scoreboard.json
benchmark/: README.md
kb/br/: 01-btop-ux-patterns.md
scripts/: benchmark-compare.ts  benchmark-head-to-head.ts  benchmark-startup.ts  schedule-tests.sh  test-dot-matrix.sh  test-inline-expand.sh  test-widths.sh
src/: index.tsx
src-rust/: Cargo.toml
src-rust/src/: app.rs  main.rs  state.rs
src-rust/src/collector/: mod.rs
src-rust/src/ui/: mod.rs
src/core/: chat-session.ts  collector.ts  index.ts  types.ts
src/tui/: App.tsx  BenchmarkSystemApp.tsx  buddyQuips.ts
src/tui/components/: AgentPanel.tsx  AnimatedBar.tsx  BuddyPanel.tsx  ChatPanel.tsx  ClaudePanel.tsx  DevPanel.tsx  DockerPanel.tsx  DotMatrixBar.tsx  FullscreenPane.tsx  SegmentedBar.tsx  StatusBar.tsx  SystemPanel.tsx
src/tui/hooks/: useKeybindings.ts  useViewMode.ts
