[package]
name = "lazymem-rs"
version = "0.1.1"
edition = "2024"

[lib]
name = "lazymem_rs"
path = "src/lib.rs"

[[bin]]
name = "lazymem"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
libc = "0.2"
ratatui = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
